--- a/cn.zh-CN/用户指南/日志分析/日志报表仪表盘.md
+++ b/cn.zh-CN/用户指南/日志分析/日志报表仪表盘.md
@@ -6,14 +6,14 @@
 
 下图所示为主机日志列表的仪表盘：
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22778/155487621413515_zh-CN.png)
+![1](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22778/156453584213515_zh-CN.png)
 
 ## 安全：告警中心 {#section_v23_cms_kfb .section}
 
 提供安全告警相关的全局视图，包括新增/处理的趋势、分布与状态等。
 
-|**图表**|**类型**|**默认时间范围**|**描述**|**样例**|
-|------|------|----------|------|------|
+|图表|类型|默认时间范围|描述|样例|
+|--|--|------|--|--|
 |相关客户端|单值比较|今日（整点）/环比昨日|发生安全告警问题的**独立主机设备**的个数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
 |新增告警|单值比较|今日（整点）/环比昨日|新增安全告警事件数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
 |处理告警|单值比较|今日（整点）/环比昨日|处理安全告警事件数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
@@ -32,8 +32,8 @@
 
 提供漏洞相关的全局视图，包括漏洞分布、新增/严重/修复的趋势、状态等。
 
-|**图表**|**类型**|**默认时间范围**|**描述**|**样例**|
-|------|------|----------|------|------|
+|图表|类型|默认时间范围|描述|样例|
+|--|--|------|--|--|
 |相关客户端|单值比较|今日（整点）/环比昨日|发生漏洞问题的**独立主机设备**的个数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
 |新增漏洞|单值比较|今日（整点）/环比昨日|新增安全漏洞事件数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
 |验证漏洞|单值比较|今日（整点）/环比昨日|验证安全漏洞事件数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
@@ -53,8 +53,8 @@
 
 提供基线检查相关的全局视图，包括检查问题分布、新增/处理的趋势、状态等。
 
-|**图表**|**类型**|**默认时间范围**|**描述**|**样例**|
-|------|------|----------|------|------|
+|图表|类型|默认时间范围|描述|样例|
+|--|--|------|--|--|
 |相关客户端|单值比较|今日（整点）/环比昨日|发生基线问题的**独立主机设备**的个数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
 |新增基线|单值比较|今日（整点）/环比昨日|新增基线事件数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
 |验证基线|单值比较|今日（整点）/环比昨日|验证基线事件数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
@@ -78,7 +78,7 @@
 |图表名称|数据类型|默认时间范围|描述|样例|
 |----|----|------|--|--|
 |登录次数|单值比较|1小时/环比昨日|总的登录总数，以及与昨日同时段比的一个百分比增加减少状况。|10个 增加10%|
-|被登录设备|单值比较|今日（整点）/环比昨日|被登录的**独立主机设备**的个数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
+|被登录设备数|单值比较|今日（整点）/环比昨日|被登录的**独立主机设备**的个数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
 |独立登录源IP|单值比较|今日（整点）/环比昨日|登录设备的独立源个数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
 |独立登录用户名|单值比较|今日（整点）/环比昨日|登录设备的独立用户名的个数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
 |终端登录监控趋势|柱状图与线图|今日（整点）|每小时的发生登录事件的设备以及登录次数的趋势图。|-|
@@ -102,13 +102,14 @@
 |----|----|------|--|--|
 |进程启动次数|单值比较|1小时/环比昨日|进程启动事件总数，以及与昨日同时段比的一个百分比增加减少状况。|10个 增加10%|
 |相关设备数|单值比较|今日（整点）/环比昨日|发生进程启动事件的**独立主机设备**的个数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
-|独立启动进程名称|单值比较|今日（整点）/环比昨日|启动的独立进程名的个数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
+|独立启动进程名数|单值比较|今日（整点）/环比昨日|启动的独立进程名的个数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
 |终端设备数|柱状图与线图|今日（整点）|每小时的发生进程启动的设备以及独立进程名个数的趋势图，单位为个/小时。|-|
 |进程启动趋势|线图|今日（整点）|每小时的每台设备平均启动进程数，单位为个/小时。|-|
 |外网设备分布|地图（全球）|今日（整点）|发生进程启动的有外网地址的设备数的地理分布。|-|
 |外网设备上进程启动次数分布|地图（全球）|今日（整点）|发生有外网地址的设备上进程事件数的地理分布。|-|
 |启动次数最多的20个进程|表格|今日（整点）|启动次数最多的20个进程，包括进程名、进程路径、启动次数等。|-|
 |触发Bash最多的前20个进程|表格|今日（整点）|触发Bash最多的前20个进程，包括父进程名、触发总数等。|-|
+|启动进程最多的前30个Java文件|表格|今日（整点）|启动进程最多的前30个Java文件，包括Jar文件名、Jar文件路径、总的启动次数等。|-|
 |启动进程最多的前30个客户端|表格|今日（整点）|启动进程最多的前30个客户端，包括客户端、总的启动次数、这个客户端上启动次数最多的命令行、对应进程名/次数和占比等。|-|
 
 ## 主机：网络连接中心 {#section_xhm_b4l_kfb .section}
@@ -124,28 +125,28 @@
 |独立进程|单值比较|今日（整点）/环比昨日|发生网络连接的变化事件**独立进程名**数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
 |独立源IP|单值比较|今日（整点）/环比昨日|发生网络连接的变化事件的**独立连接源IP**的个数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
 |独立目标IP|单值比较|今日（整点）/环比昨日|发生网络连接的变化事件的**独立连接目标IP**的个数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
-|网络连接趋势|双线图|今日（整点）|每小时发生网络连接的设备数以及事件数的趋势图，单位为个/每小时。|-|
-|连接类型趋势|双线图|今日（整点）|每小时发生网络连接变化事件的连接类型（对外、接收）分布的趋势图，单位为个/每小时。|-|
-|连接类型分布|饼图|今日（整点）|网络连接变化事件的连接类型（对外、接收）的分布。|-|
-|协议类型分布|饼图|今日（整点）|网络连接变化事件的连接协议（tcp、udp等）的分布。|-|
-|外网设备分布|地图（全球）|今日（整点）|发生网络连接变化事件的设备数的地理分布。|-|
-|外网设备事件分布|地图（全球）|今日（整点）|发生有外网地址的设备上网络连接变化事件数的地理分布。|-|
-|对外连接目标分布|地图（全球）|今日（整点）|网络连接变化事件的对外连接的目标的地理分布。|-|
-|接收连接源分布|地图（全球）|今日（整点）|网络连接变化事件的接收连接的源目标的地理分布。|-|
-|对外连接最多的30个设备|表格|今日（整点）|发生对外连接类型的网络连接变化事件最多的30个设备，包括设备、对外连接事件数、独立的连接目标数、以及样例。|-|
-|接收连接最多的30个设备|表格|今日（整点）|发生接收连接类型的网络连接变化事件最多的30个设备，包括设备、侦听IP、接收连接事件数、侦听端口数，以及样例。|-|
-|对外连接目标最多的30个设备|表格|今日（整点）|发生对外连接类型的网络连接变化事件中目标最多的30个设备，包括设备、对外连接事件数、独立的连接目标数、以及样例。| |
-|接收连接最多的30个侦听端口|表格|今日（整点）|发生接收连接类型的网络连接变化事件中最多的30个侦听端口，包括侦听端口、接收连接事件数、以及样例。|-|
-|对外连接最多的30个进程|表格|今日（整点）|发生对外连接类型的网络连接变化事件的最多的30个进程名，包括进程名、对外连接事件数、相关设备数、以及路径样例。|-|
-|接收连接最多的30个进程连接最多的30个设备|表格|今日（整点）|发生接收连接类型的网络连接变化事件的最多的30个进程名，包括进程名、对外连接事件数、相关设备数、以及路径样例。|-|
+|网络连接趋势|双线图|1小时/环比昨日|每小时发生网络连接的设备数以及事件数的趋势图，单位为个/每小时。|-|
+|连接类型趋势|双线图|1小时/环比昨日|每小时发生网络连接变化事件的连接类型（对外、接收）分布的趋势图，单位为个/每小时。|-|
+|连接类型分布|饼图|1小时/环比昨日|网络连接变化事件的连接类型（对外、接收）的分布。|-|
+|协议类型分布|饼图|1小时/环比昨日|网络连接变化事件的连接协议（tcp、udp等）的分布。|-|
+|外网设备分布|地图（全球）|1小时/环比昨日|发生网络连接变化事件的设备数的地理分布。|-|
+|外网设备事件分布|地图（全球）|1小时/环比昨日|发生有外网地址的设备上网络连接变化事件数的地理分布。|-|
+|对外连接目标分布|地图（全球）|1小时/环比昨日|网络连接变化事件的对外连接的目标的地理分布。|-|
+|接收连接源分布|地图（全球）|1小时/环比昨日|网络连接变化事件的接收连接的源目标的地理分布。|-|
+|对外连接最多的30个设备|表格|1小时/环比昨日|发生对外连接类型的网络连接变化事件最多的30个设备，包括设备、对外连接事件数、独立的连接目标数、以及样例。|-|
+|接收连接最多的30个设备|表格|1小时/环比昨日|发生接收连接类型的网络连接变化事件最多的30个设备，包括设备、侦听IP、接收连接事件数、侦听端口数，以及样例。|-|
+|对外连接目标最多的30个设备|表格|1小时/环比昨日|发生对外连接类型的网络连接变化事件中目标最多的30个设备，包括设备、对外连接事件数、独立的连接目标数、以及样例。|-|
+|接收连接最多的30个侦听端口|表格|1小时/环比昨日|发生接收连接类型的网络连接变化事件中最多的30个侦听端口，包括侦听端口、接收连接事件数、以及样例。|-|
+|对外连接最多的30个进程|表格|1小时/环比昨日|发生对外连接类型的网络连接变化事件的最多的30个进程名，包括进程名、对外连接事件数、相关设备数、以及路径样例。|-|
+|接收连接最多的30个进程|表格|1小时/环比昨日|发生接收连接类型的网络连接变化事件的最多的30个进程名，包括进程名、对外连接事件数、相关设备数、以及路径样例。|-|
 
 ## 网络：DNS访问中心 {#section_ar1_jms_kfb .section}
 
 提供云主机上的DNS查询的全局视图，包括外网查询成功率、本地以及外网DNS查询的分布、趋势等。
 
-|**图表**|**类型**|**默认时间范围**|**描述**|**样例**|
-|------|------|----------|------|------|
-|外网DNS流量包|单值比较|1小时/环比昨日|外网DNS流量包数，以及与昨日同时段比的一个百分比增加减少状况。|100个 增加10%|
+|图表|类型|默认时间范围|描述|样例|
+|--|--|------|--|--|
+|外网DNS流量包|单值比较|今日（整点）/环比昨日|外网DNS流量包数，以及与昨日同时段比的一个百分比增加减少状况。|100个 增加10%|
 |外网DNS请求成功率|单值比较|今日（整点）/环比昨日|外网DNS请求成功率，以及与昨日全天比的增加减少点的状况。|98% 增加5个点|
 |独立DNS查询域名数|单值比较|今日（整点）/环比昨日|独立DNS查询域名数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
 |内网DNS流量包|单值比较|今日（整点）/环比昨日|内网DNS流量包数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
@@ -160,8 +161,8 @@
 
 提供主机对外Http以及基于主机的Web服务被访问的全局视图，请求成功率、访问趋势与有效率、被访问域名的分布、以及其他相关分布等。
 
-|**图表**|**类型**|**默认时间范围**|**描述**|**样例**|
-|------|------|----------|------|------|
+|图表|类型|默认时间范围|描述|样例|
+|--|--|------|--|--|
 |有效请求率|单值比较|今日（整点）/环比昨日|Http请求成功率\(返回值<400的占比），以及与昨日全天比的增加减少点的状况。|98% 增加5个点|
 |Web访问数|单值比较|今日（整点）/环比昨日|Http请求数，以及与昨日同时段比的一个百分比增加减少状况。|100个 增加10%|
 |独立访问目标数|单值比较|今日（整点）/环比昨日|Http请求独立目标数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
@@ -169,16 +170,16 @@
 |访问趋势与有效率|柱状图与线图|今日（整点）|每小时的Http请求数以及成功率（返回值<400的占比\)的趋势图。|-|
 |独立访问目标/源IP趋势|双线图|今日（整点）|每小时的Http请求的独立源IP与目标IP数的趋势图。|-|
 |访问状态分布|流图|今日（整点）|每小时的Http请求返回值（2XX、3XX等）的分布。|-|
-|访问域名|矩形图|今日（整点）|被访问最多的100个域名的分布。|-|
+|访问域名Top10|矩形图|今日（整点）|被访问最多的100个域名的分布。|-|
 |请求内容类型分布Top10|饼图|今日（整点）|Http请求最多的10个内容类型（如text/plain等）。|-|
 |Referer|表格|今日（整点）|Http请求最多前20个Referer，包括Referer、所在主机以及请求数等。|-|
 
-## 网络：网络访问中心 {#section_er3_4ms_kfb .section}
+## 网络：网络会话中心 {#section_er3_4ms_kfb .section}
 
 提供云资产相关网络会话的全局视图，包括连接趋势、分布，链接目标以及接入的分布与趋势等。
 
-|**图表**|**类型**|**默认时间范围**|**描述**|**样例**|
-|------|------|----------|------|------|
+|图表|类型|默认时间范围|描述|样例|
+|--|--|------|--|--|
 |网络会话|单值比较|1小时/环比昨日|网络会话总数，以及与昨日同时段比的一个百分比增加减少状况。|10个 增加10%|
 |独立目标IP|单值比较|今日（整点）/环比昨日|网络会话的**独立连接目标IP**的个数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
 |独立源IP|单值比较|今日（整点）/环比昨日|网络会话的**独立连接源IP**的个数，以及与昨日全天比的一个百分比增加减少状况。|10个 增加10%|
