--- a/intl.zh-CN/用户指南/日志分析/导出日志.md
+++ b/intl.zh-CN/用户指南/日志分析/导出日志.md
@@ -7,22 +7,22 @@
 ## 操作步骤 {#section_clk_gvk_kfb .section}
 
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
-2.  单击左侧导航栏的**日志分析**。
-3.  单击原始日志列表右侧的下载日志按钮![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22734/155983719913508_zh-CN.png)打开**日志下载**对话框。
+2.  单击左侧导航栏的**调查响应** \> **日志分析**。
+3.  单击**原始日志**列表右侧的下载日志按钮![1](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22734/156453590513508_zh-CN.png)打开**日志下载**对话框。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22734/155983720048859_zh-CN.png)
+    ![2](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22734/156453590548859_zh-CN.png)
 
-4.  在日志下载对话框中单击**下载本页日志**以CSV格式将本页面的日志保存到本地。
+4.  在日志下载对话框中单击**下载本页日志**，以CSV格式将本页面的日志保存到本地。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22734/155983720037902_zh-CN.png)
+    ![3](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22734/156453590537902_zh-CN.png)
 
 5.  您也可以单击**通过命令行工具下载所有日志**下载所有日志。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22734/155983720013509_zh-CN.png)
+    ![4](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22734/156453590513509_zh-CN.png)
 
-    1.  单击下载日志对话框中的[命令行工具CLI用户手册](https://aliyun-log-cli.readthedocs.io/en/latest/README_CN.html?spm=5176.10560872.0.0.19b234c002pySx#安装)，打开命令行安装说明页面。
+    1.  单击下载日志对话框中的[帮助文档](https://aliyun-log-cli.readthedocs.io/en/latest/README_CN.html?spm=5176.2020520112.0.0.262f34c0Lv7gDo#%E5%AE%89%E8%A3%85)，打开命令行安装说明页面。
     2.  安装命令行工具。
-    3.  单击[安全信息管理页面链接](https://usercenter.console.aliyun.com/?spm=5176.10560872.0.0.19b234c002pySx#/manage/ak)查看并复制当前用户的秘钥ID和KEY。
+    3.  单击[安全信息管理](https://usercenter.console.aliyun.com/?spm=5176.2020520112.0.0.262f34c0Lv7gDo#/manage/ak)，查看并复制当前用户的秘钥ID和KEY。
     4.  单击**复制命令行**并用当前用户的秘钥ID和KEY替换该命令行中`【步骤2中的秘钥ID】`和`【步骤2中的秘钥Key】`。
     5.  在CLI命令行工具中执行该命令。
     命令执行后，云安全中心全部日志将自动下载并保存到运行命令的当前目录下的**download\_data.txt**文件中。
