--- a/intl.zh-CN/用户指南/设置/设置.md
+++ b/intl.zh-CN/用户指南/设置/设置.md
@@ -16,7 +16,7 @@
 2.  定位到**安全运营** \> **设置**页面，单击**设置**页签。
 3.  在病毒查杀模块，单击**管理**。
 
-    ![0](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156454227749752_zh-CN.png)
+    ![0](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156465376549752_zh-CN.png)
 
 4.  在病毒查杀检测范围对话框中勾选要开启病毒查杀自动隔离的服务器。
 
@@ -41,7 +41,7 @@
 1.  在云安全中心控制台定位到**安全运营** \> **设置**页面，单击**设置**页签。
 2.  在网站后门查杀模块，单击**管理**。
 
-    ![1](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156454227749755_zh-CN.png)
+    ![1](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156465376549755_zh-CN.png)
 
 3.  设置需要开启网站后门查杀的服务器。
 
@@ -51,11 +51,11 @@
 
 ## 容器威胁检测 {#section_yk5_x79_1dq .section}
 
-云安全中心**企业版**支持**容器威胁检测**能力，实时为您检测正在运行的容器安全状态，帮助您及时发现容器中的安全隐患和黑客入侵行为。容器威胁检测功能无需配置。
+云安全中心**企业版**支持**容器威胁检测**能力，实时为您检测正在运行的容器安全状态，帮助您及时发现容器中的安全隐患和黑客入侵行为。
 
 **说明：** 云安全中心企业版**容器威胁检测**功能无需设置，基础版或高级版用户需要先升级至企业版，才能使用**容器威胁检测**服务。
 
-![3](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156454227753731_zh-CN.png)
+![3](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156465376553731_zh-CN.png)
 
 ## 防护模式管理 {#section_ha1_x19_1to .section}
 
@@ -73,7 +73,7 @@ Agent插件在服务器上运行时，会占用少量服务器资源。您可以
 1.  在云安全中心控制台定位到**安全运营** \> **设置**页面，单击**设置**页签。
 2.  在**防护模式管理**模块，单击**管理**。
 
-    ![2](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156454227852786_zh-CN.png)
+    ![2](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156465376552786_zh-CN.png)
 
 3.  在防护模式管理对话框中，为服务器配置Agent运行模式。
 
