--- a/intl.zh-CN/常见问题/常见问题隐藏目录/安骑士、态势感知和云安全中心的区别.md
+++ b/intl.zh-CN/常见问题/常见问题隐藏目录/安骑士、态势感知和云安全中心的区别.md
@@ -1,18 +1,18 @@
 # 安骑士、态势感知和云安全中心的区别 {#concept_405983 .concept}
 
-阿里云提供安骑士和云安全中心（态势感知全新升级版产品名称），帮助用户全面从主机以及系统层面防御风险和威胁、提升安全指数。
+阿里云提供安骑士和云安全中心（态势感知全新升级版产品名称），帮助用户全面从主机以及系统层面防御风险和威胁，提升安全指数。
 
 安骑士是阿里云提供的服务器安全服务产品，为您的主机提供实时防护。安骑士支持基础版（免费版）和企业版。基础版和企业版功能差异，参见[功能列表](../../../../intl.zh-CN/产品简介/功能列表.md#)。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/328923/156197562148766_zh-CN.png)
+![1](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/328923/156493805048766_zh-CN.png)
 
 云安全中心是由态势感知全新升级而来，继承了态势感知的所有功能，并新增了安全评分总览、网页防篡改、病毒查杀、攻击分析、安全大屏等功能，是实时检测、分析和预警安全威胁的统一安全管理平台。云安全中心提供基础版、高级版和企业版，3个版本的功能详情参见[功能特性](../../../../intl.zh-CN/产品简介/功能特性.md#)。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/328923/156197562148769_zh-CN.png)
+![2](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/328923/156493805053592_zh-CN.png)
 
 ## 安骑士企业版升级到云安全中心高级版功能说明 {#section_jxb_tcy_svx .section}
 
-安骑士企业版升级到云安全中心高级版后，会在原有安骑士企业版基础上增加云产品配置检查和安全评分的功能；相比原有的云安全中心高级版，会不支持资产指纹和基线检查的功能。
+安骑士企业版升级到云安全中心高级版后，会在原有安骑士企业版基础上增加云产品配置检查和安全评分的功能；相比原有的安骑士企业版，云安全中心高级版不支持资产指纹和基线检查的功能。
 
 表格元素说明：
 
