--- a/intl.zh-CN/产品简介/功能特性.md
+++ b/intl.zh-CN/产品简介/功能特性.md
@@ -79,7 +79,7 @@
 |云产品威胁检测|基于用户行为分析，对云产品的异常使用进行检测。|X|X|√|
 |应用事件检测|对通过应用入侵的行为进行检测，如：SQLServer。|X|√|√|
 |自动化攻击溯源|支持多类攻击自动化攻击溯源，溯源出攻击IP和主机中的入侵弱点。|X|X|√|
-|其他|DDoS攻击行为检测。|√|X|√|
+|其他|DDoS攻击行为检测。|X|X|√|
 |漏洞管理|Linux软件漏洞|【Linux软件漏洞检测】对标CVE官方漏洞库，采用OVAL匹配引擎进行软件版本比对，对当前使用的软件版本中存在的漏洞进行告警。|√|√|√|
 |【漏洞修复】支持一键运行update升级命令修复漏洞，以及生成漏洞修复命令，用于手动修复。|X|√|√|
 |Windows系统漏洞|【Windows系统漏洞检测】同步微软官网补丁源，对高危及有影响的漏洞进行检测和提醒。|√|√|√|
