--- a/cn.zh-CN/常见问题/云安全中心常见问题概览.md
+++ b/cn.zh-CN/常见问题/云安全中心常见问题概览.md
@@ -11,7 +11,8 @@
 
 ## 权限相关问题 {#section_xwi_c6l_ede .section}
 
-[子账户登录提示当前操作未授权FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/子账户登录提示当前操作未授权FAQ.md#)
+-   [安骑士跳转到云安全中心是否需要授权？](intl.zh-CN/常见问题/常见问题隐藏目录/安骑士跳转到云安全中心是否需要授权？.md#)
+-   [子账户登录提示当前操作未授权FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/子账户登录提示当前操作未授权FAQ.md#)
 
 ## 安装、卸载相关问题 {#section_ymh_u9c_vbp .section}
 
@@ -28,7 +29,6 @@
 -   [ECS Linux 系统 CPU 异常占用：minerd 、tplink 等挖矿进程](https://www.alibabacloud.com/help/zh/faq-detail/41206.html?spm=a2c5t.10695662.1996646101.searchclickresult.760b4552WFMhAQ)
 -   [在ECS中对云安全中心服务端地址进行加白](intl.zh-CN/常见问题/常见问题隐藏目录/在ECS中对云安全中心服务端地址进行加白.md#)
 -   [云服务器 ECS 中病毒或被木马入侵了怎么办](../../../../intl.zh-CN/故障排查/操作运维 Windows/病毒安全/云服务器 ECS 中病毒或被木马入侵了怎么办.md#)
--   [在ECS中对云安全中心服务端地址进行加白](intl.zh-CN/常见问题/常见问题隐藏目录/在ECS中对云安全中心服务端地址进行加白.md#)
 
 ## 网站异常相关问题 {#section_tn8_iv0_03i .section}
 
@@ -69,9 +69,8 @@
 -   [如何手动检测系统软件漏洞？](intl.zh-CN/常见问题/常见问题隐藏目录/如何手动检测系统软件漏洞？.md#)
 -   [漏洞修复后手动验证没有反应](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞修复后手动验证没有反应.md#)
 -   [排查云安全中心无法验证系统漏洞修复的问题](intl.zh-CN/常见问题/常见问题隐藏目录/排查云安全中心无法验证系统漏洞修复的问题.md#)
--   [漏洞修复优先级排序参考](../../../../intl.zh-CN/用户指南/漏洞修复/漏洞修复优先级排序参考.md#)
--   [软件漏洞功能收费说明](intl.zh-CN/常见问题/常见问题隐藏目录/软件漏洞功能收费说明.md#)
-
+-   [漏洞修复优先级排序参考](../../../../intl.zh-CN/安全防范/漏洞修复/漏洞修复优先级排序参考.md#)
+-   [软件漏洞功能收费说明](intl.zh-CN/常见问题/常见问题隐藏目录/软件漏洞功能说明.md#)
 -   [漏洞扫描周期说明](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞扫描周期说明.md#)
 -   [服务器软件漏洞修复最佳实践](intl.zh-CN/常见问题/常见问题隐藏目录/服务器软件漏洞修复最佳实践.md#)
 -   [漏洞扫描FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞扫描FAQ.md#)
